syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;

package org.dcis.ccm.proto;

import "CIMService.proto";

message CCMResponse {
  int32 status = 1;
  optional string body = 2;
  optional org.dcis.cim.proto.SituationDescription situation = 3;
}

message CCMRequest {
  enum OPERATION {
    LOOKUP = 0;
    READ = 1;
  }
  optional string data = 1;
  optional string identifier = 2;
  optional OPERATION operation = 3;
}

service CCMService {
  rpc updateCache(CCMRequest) returns (CCMResponse);
  rpc lookupCache (CCMRequest) returns (CCMResponse);
  rpc storeInCache(CCMRequest) returns (CCMResponse);
  rpc deleteInCache(CCMRequest) returns (CCMResponse);
}