syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;

package org.dcis.cim.proto;

message CIMResponse {
  string body = 1;
  int32 status = 2;
}

message SiddhiRequest {
  string json = 1;
  string function = 2;
}

service CIMService {
  rpc registerInSiddhi (SiddhiRequest) returns (CIMResponse);
}